# International-Spy-Agency

./: .gitignore  README.md
api/: .env.dev  pyproject.toml
api/.scripts/: entrypoint.sh
api/hitmen/: managers.py  models.py  serializers.py  settings.py  urls.py  views.py
api/hitmen/fixtures/: users.json
api/hitmen/migrations/: 0001_initial.py
api/hits/: models.py  serializers.py  urls.py  views.py
api/hits/migrations/: 0001_initial.py
api/me/: urls.py  views.py
webapp/public/: manifest.json
webapp/src/components/Nav/: Nav.styles.tsx  Nav.tsx
webapp/src/views/create-hit/: CreateHit.tsx
webapp/src/views/detail-hit/: DetailHit.tsx
webapp/src/views/detail-hit/DetailHitForm/: DetailHitForm.tsx
webapp/src/views/detail-hitman/: DetailHitman.tsx
webapp/src/views/detail-hitman/DetailHitmanForm/: DetailHitmanForm.tsx
webapp/src/views/hitmen/: Hitmen.tsx
webapp/src/views/hits/: Hits.tsx
webapp/src/views/login/: Login.tsx
webapp/src/views/logout/: Logout.tsx
webapp/src/views/register/: Register.tsx
